--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,33 @@
-body{
+body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 600;
+  font-size: 20px;
   width: 100vw;
   height: 100vh;
   color: rgba(255, 255, 255, 0.87);
-  background: -webkit-gradient(linear, left top, right bottom, from(#596489), to(#f3b0ec)) fixed;
+  background: -webkit-gradient(
+      linear,
+      left top,
+      right bottom,
+      from(#596489),
+      to(#f3b0ec)
+    )
+    fixed;
   z-index: -99;
 }
-#root{
+#root {
   width: 100%;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.glassCss {
+  background: rgba(255, 255, 255, 0.15);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  border-radius: 24px;
+  backdrop-filter: blur(2.3px);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+}
